feat: refactor auth

--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,9 @@
 			"recommended": true,
 			"correctness": {
 				"noUnusedImports": "error"
+			},
+			"suspicious": {
+				"noExplicitAny": "off"
 			}
 		}
 	}
