--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aniql",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"description": "A library for interacting with the AniList API.",
 	"license": "GPL-3.0-only",
 	"type": "module",
@@ -24,15 +24,16 @@
 	},
 	"scripts": {
 		"dev": "bun test --watch",
+		"dev:one": "bun run dev -- --test-name-pattern",
 		"build:lib": "bun run build.ts",
 		"build:docs": "typedoc --options typedoc.json",
 		"build": "bun build:lib && bun build:docs"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.1.2",
+		"@biomejs/biome": "2.1.3",
 		"@types/bun": "1.2.19",
 		"typedoc-github-theme": "0.3.0",
-		"typescript": "5.8.3"
+		"typescript": "5.9.2"
 	},
 	"repository": {
 		"type": "git",
